# LearningDioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README-MACOS.txt  RELEASE.md  install-dx-rc.ps1  install-dx-rc.sh  install-dx.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml  release.yml.old
assets/: icon.icns
src/: main.rs
